src/objects/IntegrationUserSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It contains information about Integration Connected app</description>
    <fields>
        <fullName>Rest_URL__c</fullName>
        <label>Rest URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <description>It contains client secret</description>
        <label>client secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grant_type_password_client_id__c</fullName>
        <description>It contains client Id</description>
        <label>grant type password client id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <description>It contains password for integration user</description>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <description>It contains username</description>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration User Settings</label>
</CustomObject>